--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,14 +1,18 @@
-<div ng-controller="NavbarCtrl">
-    <h3 class="left">SSAU radio</h3>
-    <ul class="nav left">
-        <li ng-class="{active: isActive('/')}"><a href="/">Home</a></li>
-        <li ng-show="currentUser" ng-class="{active: isActive('/settings')}">| <a href="/settings">Settings</a></li>
-        <li ng-hide="currentUser" ng-class="{active: isActive('/login')}">| <a href="/login">Login</a></li>
-        <li ng-hide="currentUser" ng-class="{active: isActive('/signup')}">| <a href="/signup">Sign up</a></li>
-        <li ng-show="currentUser" ng-class="{active: isActive('/logout')}">| <a href="" ng-click="logout()">Logout</a></li>
-        <li ng-show="currentUser">| {{ currentUser.nickname }}</li>
-        <li ng-hide="currentUser">| {{ guestNickname }}</li>
-        <li ng-show="isAdmin()">| Admin</li>
-  </ul>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Launch Tracker</a>
+    </div>
+    <div class="collapse navbar-collapse"  ng-class="{'in':!navCollapsed}">
+      <ul class="nav navbar-nav">
+        <!-- <li class="active"><a href="#">Launch Tracker</a></li> -->
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
 </div>
-<div class="clear"></div>
