--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-include="'partials/navbar'" class="header"></div>
-    <div class="container" ng-view=""></div>
+    <div class="" ng-view=""></div>
     <div class="clear"></div>
     <div class="footer">
         <p>From Dmitry with ♥</p>
